--- a/src/components/HomeSection/HomeSection.css
+++ b/src/components/HomeSection/HomeSection.css
@@ -23,13 +23,36 @@
   margin-top: 50px;
 }
 
-.btn-content .icon {
+.big-icon {
   font-size: 4rem;
 }
 
 .content-img img {
   border-radius: 25% 25% 25% 50%;
   border: 15px solid rgba(0, 0, 0, 0.13);
+}
+
+.infoHome {
+  margin-top: 40px;
+  background-image: var(--gradient-box);
+  border-radius: 70px;
+  padding: 20px 10px;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+.infoHome__item {
+  padding: 10px;
+  gap: 20px;
+}
+
+.infoHome__info h3 {
+  margin-bottom: 10px;
+}
+
+.tel-info {
+  border-right: 2px solid rgba(0, 0, 0, 0.13);
+  border-left: 2px solid rgba(0, 0, 0, 0.13);
 }
 
 @media (max-width: 1027px) {
@@ -40,5 +63,38 @@
   .btn-content {
     justify-content: center;
     margin-top: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .infoHome {
+    flex-direction: column;
+    width: max-content;
+    padding: 20px 40px;
+    margin: 40px auto 0;
+  }
+
+  .tel-info {
+    border: none;
+    border-top: 2px solid rgba(0, 0, 0, 0.13);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.13);
+  }
+
+  .infoHome__item {
+    justify-content: start;
+    width: 100%;
+  }
+}
+
+@media (max-width: 448px) {
+  .big-icon {
+    font-size: 3rem;
+  }
+
+  .infoHome {
+    flex-direction: column;
+    width: 300px;
+    padding: 20px 10px;
+    margin: 40px auto 0;
   }
 }
