--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,7 +4,7 @@
   --primary-color: #FFFFFF;
   --secondary-primary-color: #343045;
   --accent-color: #C0B7E8;
-  --background-color: #302C42;
+  --background-color: linear-gradient(to right, #302C42, #433D60, #433D60, #302C42);
   --gradient-text: linear-gradient(45deg, #C0B7E8, #8176AF);
   --gradient-navbar: linear-gradient(to right, #3A3456, #211E2E, #3A3456);
   --gradient-button: linear-gradient(to right, #8176AF, #C0B7E8);
@@ -73,7 +73,7 @@ a {
 }
 
 body {
-  background: var(--background-color);
+  background-image: var(--background-color);
   margin: 0;
   padding: 0;
 }
@@ -133,6 +133,7 @@ section {
 
 .subtitle {
   font-weight: 300;
+  font-size: 2.7rem;
 }
 
 .subtitle-info {
@@ -142,14 +143,13 @@ section {
 
 .text {
   font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .titleDiv {
   display: flex;
   align-items: start;
   flex-direction: column;
-  letter-spacing: 1.5px;
-  font-size: 3rem;
 }
 
 @media (max-width: 1440px) {
@@ -158,14 +158,21 @@ section {
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1050px) {
   .titleDiv {
     align-items: center;
     margin: 0 auto;
+  }
+
+  .title {
     font-size: 2.7rem;
   }
 
-  .hide-on-small{
+  .subtitle {
+    font-size: 2.5rem;
+  }
+
+  .hide-on-small {
     display: none;
   }
 }
@@ -175,8 +182,16 @@ section {
     font-size: 13px;
   }
 
-  .titleDiv {
+  section {
+    padding: 3rem 0;
+  }
+
+  .title {
     font-size: 2.5rem;
+  }
+
+  .subtitle {
+    font-size: 2rem;
   }
 
   .subtitle-info {
@@ -189,8 +204,16 @@ section {
     font-size: 12px;
   }
 
-  .titleDiv {
+  section {
+    padding: 2rem 0;
+  }
+
+  .title {
     font-size: 2rem;
+  }
+
+  .subtitle {
+    font-size: 1.7rem;
   }
 
   .subtitle-info {
