--- a/src/components/ProcessSection/ProcessSection.css
+++ b/src/components/ProcessSection/ProcessSection.css
@@ -1,6 +1,3 @@
-.process {
-  padding: 50px;
-}
 
 .process__header {
   justify-content: space-between;
@@ -35,7 +32,7 @@
 }
 
 .processDiv {
-  margin-top: 50px;
+  padding: 50px;
   content: '';
   position: relative;
   top: 0;
@@ -55,7 +52,7 @@
 }
 
 @media (max-width: 448px) {
-  .process {
+  .processDiv {
     padding: 20px;
   }
 
